--- a/android/src/main/res/layout/layout_bitmoji_picker_bottom_sheet.xml
+++ b/android/src/main/res/layout/layout_bitmoji_picker_bottom_sheet.xml
@@ -1,46 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:id="@+id/textField"-->
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progress_bar"-->
 <!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:startIconDrawable="@android:drawable/ic_menu_search"-->
-<!--        app:startIconContentDescription="@string/content_description_search_icon"-->
-<!--        android:hint="@string/search_bitmoji"-->
-<!--        app:hintEnabled="false"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
+<!--        android:layout_height="match_parent" />-->
 
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
-
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/progressIndicatorContainer"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-<!--        <com.google.android.material.progressindicator.CircularProgressIndicator-->
-<!--            android:id="@+id/progressIndicator"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:indeterminate="true"-->
-<!--            app:layout_constraintTop_toTopOf="@id/progressIndicatorContainer"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/progressIndicatorContainer"-->
-<!--            app:layout_constraintStart_toStartOf="@id/progressIndicatorContainer"-->
-<!--            app:layout_constraintEnd_toEndOf="@id/progressIndicatorContainer" />-->
-
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-    <FrameLayout
-        android:id="@+id/frameLayout"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:tag="bitmoji_picker">
+    </androidx.fragment.app.FragmentContainerView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
